--- a/style.css
+++ b/style.css
@@ -391,3 +391,16 @@ input[type="search"]::-webkit-search-results-decoration {
 .price-item .price {
     justify-content: end;
 }
+
+.item-login  p{
+    font-size: 20px;
+    font-weight: 700;
+
+}
+
+.item-login input {
+    width: 80%;
+    height: 30px;
+    border-radius: 69deg;
+    
+}
