--- a/style.css
+++ b/style.css
@@ -404,3 +404,55 @@ input[type="search"]::-webkit-search-results-decoration {
     border-radius: 69deg;
     
 }
+
+.link-dark {
+    font-size: 19px;
+    text-decoration: none;
+    margin-left: 35px;
+}
+
+.border-top {
+    color: black;
+}
+
+.menu-hr {
+   color: black;
+}
+
+
+.card-shop-1 {
+    width: 250px;
+    height: 400px;
+    border: 1px solid rgba(0, 0, 0, .1);
+    border-radius: 3px;
+    margin: 10px;
+}
+
+
+
+.add-to-card-shop-1 {
+    color: white;
+    text-align: center;
+    background-color: #BCAC76;
+    position: relative;
+    top: 50%;
+    width: 100%;
+    opacity: 0%;
+    border: 0px solid transparent;
+
+}
+
+#stars-shop-1{
+    opacity: 0%;
+    transition: 100ms;
+    text-align: center;
+}
+
+
+.card-shop-1:hover #stars-shop-1 {
+    opacity: 100%;
+}
+
+.card-shop-1:hover .add-to-card-shop-1 {
+    opacity: 100%;
+}
